Fixed navbar and sidebar overlay z-index issue

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -29,5 +29,4 @@ button:focus {
 	padding: 10px;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	z-index: 0;
 }
