--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	border-radius: 0;
 	border-width: 0;
-	z-index: 1;
+	z-index: 990;
 }
 
 /*2 theme*/
@@ -70,6 +70,9 @@
  * Sidebar styles
  */
 /* General sidebar styles */
+.bm-menu-wrap {
+	z-index: 999 !important;
+}
 .bm-menu {
   background: #FFFFFF;
   padding-top: 2.5em;
@@ -101,7 +104,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 1;
+	z-index: 998 !important;
 	width: 100%;
 	height: 100%;
 	background-color: rgb(0, 0, 0);
